# thss-2025-compiler-final

./: .gitignore  CMakeLists.txt  CMakeLists（有单元测试）.txt  LICENSE  Makefile  README.md  SysYLexer.g4  SysYParser.g4  package.py  run-test.py
include/: ArrayType.h  BasicBlock.h  FunctionType.h  IRBuilder.h  IntType.h  LLVMContext.h  Module.h  PointerType.h  SymbolTable.h  SysYVisitor.h  Type.h  TypeFactory.h  Value.h  VoidType.h
src/: IRBuilder.cpp  LLVMContext.cpp  SymbolTable.cpp  SysYVisitor.cpp  main.cpp
src/antlr/: SysYLexer.cpp  SysYLexer.interp  SysYParser.cpp  SysYParser.h  SysYParser.interp
test/: unit_test.cpp
test/resources/functional/: 00_main.ll  01_var_defn2.ll  02_var_defn3.ll  03_arr_defn2.ll  04_arr_defn3.ll  05_arr_defn4.ll  06_const_var_defn2.ll  07_const_var_defn3.ll  08_const_array_defn.ll  09_func_defn.ll  10_var_defn_func.ll  11_add2.ll  12_addc.ll  13_sub2.ll  14_subc.ll  15_mul.ll  16_mulc.ll  17_div.ll  18_divc.ll  19_mod.ll  20_rem.ll  21_if_test2.ll  22_if_test3.ll  23_if_test4.ll  24_if_test5.ll  25_while_if.ll  26_while_test1.ll  27_while_test2.ll  28_while_test3.ll  29_break.ll  30_continue.ll  31_while_if_test1.ll  32_while_if_test2.ll  33_while_if_test3.ll  34_arr_expr_len.ll  35_op_priority1.ll  36_op_priority2.ll  37_op_priority3.ll  38_op_priority4.ll  39_op_priority5.ll  (+61 more)
